--- a/Form.html
+++ b/Form.html
@@ -16,7 +16,7 @@
 </style>
 
 <body>
-    <h1 style="font-family:verdana; color: darkred; text-shadow: 1px 0px 5px black;" align="center">FeedBack</h1>
+    <h1 style="font-family:forte; color: darkred; text-shadow: 1px 0px 5px black;" align="center">FEEDBACK</h1>
     <p align="center">You can help us to improvw our website by using the following form
         to let us know what you think or what needs to be changed</p>
     <table  align="center">
